# robot_learning_baselines

./: .gitignore  .gitmodules  README.md  pyproject.toml
.docker/data_transfer/: Dockerfile.data_transfer  test_build.yaml
.docker/rt-x/: Dockerfile.jax
.docker/train_job_jax/: Dockerfile.train_job  local_job.yaml  test_build.yaml  train.sh
.docker/transporter/: train.sh
.github/workflows/: open-x-embodiment-data-transfer.yaml  train-container.yaml
.kubernetes/: README.md
.kubernetes/configmaps/: entrypoint_configmap.yaml
.kubernetes/jobs/: open-x-embodiment-train-run.yaml  open-x-embodiment-train-sweep.yaml  parameter_sweep.yaml  single_train_run.yaml
.kubernetes/pvc/: open-x-embodiment.yaml  small.yaml
.kubernetes/secrets/: README.md
docs/: _config.yml  index.md
docs/datasets/: datasets.md
docs/distributed_training/: distributed_training.md  eidf.md  kubernetes.md
docs/kubernetes/: kubernetes-job-deployment.md  kubernetes.md
docs/model_architectures/: model_architectures.md
docs/training_pipelines/: training_pipelines.md
robot_learning_baselines/: README.md  hf_upload.py  perf_bench_mutli_modal.py  train_multi_modal.py  train_transporter.py  train_transporter_refactor.py
robot_learning_baselines/config/: decoder-only-transformer.yaml  octo-base-eidf.yaml  octo-base.yaml  octo-categorical-compressed.yaml  octo-categorical-eidf.yaml  octo-categorical.yaml  octo-continuous.yaml  octo-diffusion.yaml  octo-perf-bench.yaml  transporter-real.yaml  transporter-sim.yaml  transporter.yaml
robot_learning_baselines/config/dataset/: debug-open-x-embodiment-eidf.yaml  debug-open-x-embodiment.yaml  debug-transporter.yaml  open-x-embodiment.yaml  transporter-real.yaml  transporter-sim.yaml
robot_learning_baselines/config/hyperparameter_tuning/: decoder_only.yaml
robot_learning_baselines/config/training/: octo-base.yaml  transporter.yaml
robot_learning_baselines/config_parameter_tuning/: placeholder.yaml
robot_learning_baselines/data_loaders/: open-x-embodiment.py
robot_learning_baselines/data_transfer/: explore_open_x_embodiment.ipynb  open-x-embodiment.py
robot_learning_baselines/hf_scripts/: hf_upload_octo.py  hf_upload_transporter.py
robot_learning_baselines/scripts/: benchmark_token_compression.sh  run_transporter_jobs.sh
robot_learning_baselines/utils/: data.py  hugging_face.py  octo.py  pipeline.py  wandb.py
(+23 files in other folders)
